adding tabs to signin component

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,18 +25,18 @@ $black: #000000;
 
 
 // Responsive down size
-$media-beackpoint-down-xs: 413.98px;
-$media-beackpoint-down-sm: 573.98px;
-$media-beackpoint-down-md: 767.98px;
-$media-beackpoint-down-lg: 991.98px;
-$media-beackpoint-down-xl: 1199.98px;
+$media-down-xs: 413.98px;
+$media-down-sm: 573.98px;
+$media-down-md: 767.98px;
+$media-down-lg: 991.98px;
+$media-down-xl: 1199.98px;
 
 // Responsive up size
-$media-beackpoint-up-xs: 320px;
-$media-beackpoint-up-sm: 576px;
-$media-beackpoint-up-md: 768px;
-$media-beackpoint-up-lg: 992px;
-$media-beackpoint-up-xl: 1200px;
+$media-up-xs: 320px;
+$media-up-sm: 576px;
+$media-up-md: 768px;
+$media-up-lg: 992px;
+$media-up-xl: 1200px;
 
 //font
 $roboto: 'Roboto Condensed', sans-serif !important;
