--- a/src/pages/Admin/SignIn/SignIn.scss
+++ b/src/pages/Admin/SignIn/SignIn.scss
@@ -6,21 +6,49 @@
     background-position: center center;
     background-size: cover;
 
+    video{
+        opacity: 1;
+        visibility: visible;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        fit: cover;
+        background-color: transparent;
+        z-index: 1;
+    }
+
     &__content {
         @include flex(100%, column, flex-start, center);
         min-height: 100vh;
-
-        &-logo{
-            max-width: 150px;
+        z-index: 99;
+        
+        &__logo-wrapper{
+            @include flex(100%, column, center, center);
             margin: 2rem 0;
-            img{
-                width: 100%;
-                height: auto;
-                height: auto;
+
+            &--logo{
+                max-width: 150px;
+                
+                img{
+                    width: 100%;
+                    height: auto;
+                    height: auto;
+                }
+            }
+            &--name{
+                color: $secondary-color-dark;
+                font-family: inherit;
+                font-size: 2rem;
+                text-transform: lowercase;
+                letter-spacing: -1px;
             }
         }
         &-tabs{
             background-color:  $white;
+            box-shadow: 4px 4px 4px $primary-color-dark;
 
             .ant-tabs{
                 width: 90vh;
@@ -37,7 +65,7 @@
             }
             .ant-tabs-tab {
                 width: 50%;
-                margin: 0;
+                margin: 0 !important;
                 height: 60px !important;
                 text-align: center;
                 font-size: 0em + 19px / $defaultFontSize;
