--- a/src/components/Admin/RegisterForm/RegisterForm.scss
+++ b/src/components/Admin/RegisterForm/RegisterForm.scss
@@ -55,6 +55,7 @@
         
         &:hover{
             background-color: $secondary-color-light;
+            border-color: $secondary-color-light;
             color: $wildsand;
         }
         &:active{
