--- a/src/components/Admin/Users/ListUsers/ListUsers.scss
+++ b/src/components/Admin/Users/ListUsers/ListUsers.scss
@@ -8,7 +8,12 @@
 
         > button {
             margin-right: 20px;
+
+            &.ant-switch-checked{
+                background-color: $secondary-color-light;
+            }
         }
+        
     }
 
     .users-active {
@@ -16,7 +21,25 @@
         padding: 10px 20px;
 
         .ant-list-item-meta {
-            @include flex(100%, row, flex-start, center)
+            @include flex(100%, row, flex-start, center);
+        }
+        .ant-list-item-action{
+            .ant-btn{
+                color: $white;
+           
+                &.btn-warning{
+                    background-color: $secondary-color-light;
+                }
+                &.btn-primary{
+                    background-color: $sahara;
+                }
+                &.btn-danger{
+                    background-color: $monza;
+                } 
+                &:hover{
+                    border-color: transparent;
+                }
+            }
         }
     }
 }
