--- a/src/components/Admin/Users/EditUserForm/EditUserForm.scss
+++ b/src/components/Admin/Users/EditUserForm/EditUserForm.scss
@@ -2,4 +2,12 @@
 
 .edit-user-form{
     
+    .upload-avatar{
+        display: table;
+        margin: 0 auto;
+        border: 2px dashed $secondary-color-light;
+        border-radius: 100px;
+        padding: 10px;
+        margin-bottom: 20px;
+    }
 }
