--- a/src/components/Admin/MenuWeb/MenuWebList/MenuWebList.scss
+++ b/src/components/Admin/MenuWeb/MenuWebList/MenuWebList.scss
@@ -18,6 +18,8 @@
                 width: 100%;
                 background-color: rgba(255, 255, 255, 0.5);
                 margin-bottom: 1rem;
+                border-bottom: 1px solid $wildsand;
+
 
                 &:hover{
                     cursor: pointer;
