basic layout colums

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $scorpion: #606060;
 $abbey: #555a5f;
 $sahara: #abb618;
 $black: #000000;
+$background-dark: #16202b;
 
 /*Media query*/
 // $min-small: 320px; 
