Main menu & social icons

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,6 +18,12 @@ $sahara: #abb618;
 $black: #000000;
 $background-dark: #16202b;
 
+// Social Colors
+$youtube: #cd201f;
+$twitter: #1da1f2;
+$facebook: #3b5998;
+$linkedin: #0077b5;
+
 /*Media query*/
 // $min-small: 320px; 
 // $min-smart-phone: 480px;
