--- a/src/components/Web/MenuTop/MenuTop.scss
+++ b/src/components/Web/MenuTop/MenuTop.scss
@@ -1,5 +1,5 @@
 @import "./../../../scss/index.scss";
-.menu-top{
+.menu-top-web{
     position: sticky;
     top: 0;
     background-color: $background-dark;
