--- a/src/layouts/LayoutBasic.scss
+++ b/src/layouts/LayoutBasic.scss
@@ -1,3 +1,11 @@
+@import "../scss/index.scss";
 .ant-row{
     width: 100%;
+}
+.main-container{
+    @include flex(100%, column, flex-start, flex-start);
+
+    .content{
+        width: 100%;
+    }
 }
